--- a/index.html
+++ b/index.html
@@ -9,57 +9,114 @@
 
 <!--    linnking -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 
 </head>
 <body>
     <!--banner section-->
     <header class="banner">
-        <h1 class="banner-title"></h1>
-        <p class="banner-details"></p>
-        <button class="banner-btn"></button>
+        <div class="banner-details">
+            <h1 class="banner-title">
+                All Thinks Are
+                <br>
+                Possible If You
+                <br>
+                believe
+            </h1>
+            <p class="banner-description">
+                There are many variations of passages of Lorem Ipsum
+                <br>
+                available, but the majority have suffered alteration in some
+                <br>
+                form, by injected humour, or randomised words
+            </p>
+            <button class="banner-btn">Contact Us</button>
+        </div>
     </header>
 
     <main class="content">
 <!--        failure section-->
         <section class="failure">
-            <img src="" alt="" class="failure-img">
+            <img src="images/person.png" alt="" class="failure-img">
             <div class="failure-body">
-                <h1 class="failure-title"></h1>
-                <p class="failure-details"></p>
+                <h1 class="failure-title">
+                    My failures of
+                    <br>
+                    previous year
+                </h1>
+                <p class="failure-details">
+                    Contrary to popular belief, Lorem Ipsum is not
+                    <br>
+                    simply random text. It has roots in a piece of
+                    <br>
+                    classical Latin literature from 45 BC, making it over
+                    <br>
+                    2000 years old. Richard McClintock.
+                </p>
+                <ul class= "failure-list">
+                    <li class="failure-list-item"> <i class="fa fa-check failure-list-icon"></i>Contrary to popular belief, is not simply.</li>
+                    <li class="failure-list-item"> <i class="fa fa-check failure-list-icon" ></i>Contrary to popular belief.</li>
+                    <li class="failure-list-item"> <i class="fa fa-check failure-list-icon"></i>Contrary to popular , is not simply.</li>
+                    <li class="failure-list-item"> <i class="fa fa-check failure-list-icon"></i>Contrary to popular belief, is not simply.</li>
+                    <li class="failure-list-item"> <i class="fa fa-check failure-list-icon"></i>Contrary to popular simply.</li>
+                </ul>
             </div>
         </section>
 
 <!--        plan section-->
         <section class="plan">
-            <div class="plan-title"></div>
+            <div class="plan-title">My Plans</div>
             <div class="plan-list">
-                <div class="plan-one">
-                    <img src="" alt="" class="plan-one-img">
-                    <h1 class="plan-one-title"></h1>
-                    <p class="plan-one-details"></p>
+                <div class="plan-description">
+                    <img src="images/icons/web.png" alt="" class="plan-description-img">
+
+                    <div class="plan-description-body">
+                        <h1 class="plan-description-title">Web Development</h1>
+                        <p class="plan-description-details">I want to start</p>
+                    </div>
+
                 </div>
-                <div class="plan-two">
-                    <img src="" alt="" class="plan-two-img">
-                    <h1 class="plan-two-title"></h1>
-                    <p class="plan-two-details"></p>
+                <div class="plan-description">
+                    <img src="images/icons/js.png" alt="" class="plan-description-img">
+
+                    <div class="plan-description-body">
+                        <h1 class="plan-description-title">Javascript</h1>
+                        <p class="plan-description-details">I want to learn</p>
+                    </div>
+
                 </div>
-                <div class="plan-three">
-                    <img src="" alt="" class="plan-three-img">
-                    <h1 class="plan-three-title"></h1>
-                    <p class="plan-three-details"></p>
+                <div class="plan-description">
+                    <img src="images/icons/smoke.png" alt="" class="plan-description-img">
+
+                    <div class="plan-description-body">
+                        <h1 class="plan-description-title">Smoking Habit</h1>
+                        <p class="plan-description-details">I want to end</p>
+                    </div>
+
                 </div>
-                <div class="plan-four">
-                    <img src="" alt="" class="plan-four-img">
-                    <h1 class="plan-four-title"></h1>
-                    <p class="plan-four-details"></p>
+                <div class="plan-description">
+                    <img src="images/icons/ecom.png" alt="" class="plan-description-img">
+
+                    <div class="plan-description-body">
+                        <h1 class="plan-description-title">ecommerce</h1>
+                        <p class="plan-description-details">I want to develop</p>
+                    </div>
+
                 </div>
             </div>
         </section>
 
 <!--        call section-->
         <section class="call">
-            <h1 class="call-title"></h1>
-            <button class="call-button"></button>
+            <div class="call-body">
+                <h1 class="call-title">Awlays keep a positive
+                    <br>
+                    mindset</h1>
+                <button class="call-btn">Call Now</button>
+            </div>
         </section>
     </main>
 
