--- a/index.html
+++ b/index.html
@@ -123,19 +123,31 @@
 <!--    footer section-->
     <footer class="footer">
         <div class="footer-about">
-            <h1 class="footer-about-title"></h1>
-            <p class="footer-about-details"></p>
+            <h1 class="footer-about-title">Future</h1>
+            <p class="footer-about-details">There are many variations of passages of Lorem Ipsum
+                <br>
+                available, but the majority have suffered alteration in some
+                <br>
+                form, by injected humour, or randomised words</p>
+
+            <p class="footer-about-details">Email : info@gmail.com</p>
+            <p class="footer-about-details">Phone : 01500 00 00 00</p>
             <div class="footer-about-icons">
-                <img src="" alt="" class="icon1">
-                <img src="" alt="" class="icon2">
-                <img src="" alt="" class="icon3">
+                <img src="images/icons/fb.png" alt="" class="icon">
+                <img src="images/icons/twitter.png" alt="" class="icon">
+                <img src="images/icons/youtube.png" alt="" class="icon">
             </div>
         </div>
 
         <div class="footer-subscription">
-            <h1 class="footer-subscription-title"></h1>
-            <form action=""></form>
-            <button class="footer-subscription-btn"></button>
+            <h1 class="footer-subscription-title">Subscribe</h1>
+            <form action=" ">
+                <input type="text"  name="email" value="Enter your email" class="footer-subscription-email">
+                <br>
+                <br>
+                <br>
+                <input type="submit" value="Submit" class="footer-subscription-btn">
+            </form>
         </div>
     </footer>
 </body>
